[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["sujith vakathanam <sujithvakathanam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.2.2"
pylint = "^3.2.2"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
